# NASA_battery_federated_learning

./: .gitignore  README.md  install_deps.py  render_benchmark_dashboard.py  requirements.txt  rerender_existing_results.py  run_all_results.py  run_benchmark_suite.py
Federated/: dataset.py
Federated/soh_federated/: BENCHMARKS.md  README.md  boosted_simulate.py  pyproject.toml  simulate.py  xgboost_simulate.py
Federated/soh_federated/results/: benchmark_report.json
Federated/soh_federated/results_quick/: benchmark_report.json
Federated/soh_federated/sohfed/: benchmarks.py  client_app.py  server_app.py  task.py
Traditional/: benchmark_traditional.py  dataset.py  traditional_benchmark_report.json
benchmark_outputs/: comparison_report.json  summary.md
benchmark_outputs/federated/: benchmark_report.json
benchmark_outputs/traditional/: traditional_benchmark_report.json
benchmark_outputs_improved/: comparison_report.json  summary.md
benchmark_outputs_improved/federated/: benchmark_report.json
benchmark_outputs_improved/traditional/: traditional_benchmark_report.json
